tests/NormalTests/paczka1/small_fuzzy/46136732.err
Error in line 1: pzxI S613 92,0
Error in line 8: pzxI S921 46,7
